# pdfboi

./: README.md  convertto_widget.py  delete_widget.py  excel_file.py  main.py  merge_widget.py  pdf_viewer_widget.py  pdflist_widget.py  pyproject.toml  reorder_widget.py  rotate_widget.py  split_widget.py  thumbnailwidget.py  util.py
