[project]
name = "pdfboi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
    "pypdf>=6.13.3",
    "pypdfium2>=5.10.1",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "ruff>=0.15.18",
]
