[project]
name = "pdfboi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arabic-reshaper>=3.0.1",
    "openpyxl>=3.1.5",
    "pdf2docx>=0.5.13",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pypdf>=6.13.3",
    "pypdfium2>=5.10.1",
    "pyside6>=6.11.1",
    "python-bidi>=0.6.10",
    "python-docx>=1.2.0",
    "regex>=2026.5.9",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "ruff>=0.15.18",
]
